package com.fss.fo.mserver.exchange;
option java_package = "com.fss.fo.mserver.exchange";
option java_outer_classname = "OddLotStockInforProtos";
message OddLotStockInfor {
	optional string Id = 1;
    optional string symbol = 2;
    optional string StockId = 3;
    optional string FullName = 4;
    optional string tradingdate = 5;
    optional string FloorCode = 6;
    optional string StockType = 7;
    optional string ceiling = 8;
    optional string floor = 9;
    optional string reference = 10;
    optional string bidPrice3 = 11;
    optional string bidVol3 = 12;
    optional string bidPrice2 = 13;
    optional string bidVol2 = 14;
    optional string bidPrice1 = 15;
    optional string bidVol1 = 16;
    optional string closePrice = 17;
    optional string closeVol = 18;
    optional string change = 19;
    optional string offerPrice1 = 20;
    optional string offerVol1 = 21;
    optional string offerPrice2 = 22;
    optional string offerVol2 = 23;
    optional string offerPrice3 = 24;
    optional string offerVol3 = 25;
    optional string totalTrading = 26;
    optional string totalTradingValue = 27;
    optional string averagePrice = 28;
    optional string open = 29;
    optional string high = 30;
    optional string low = 31;
    optional string foreignBuy = 32;
    optional string foreignSell = 33;
    optional string foreignRemain = 34;
    optional string foreignRoom = 35;
    optional string TOTAL_OFFER_QTTY = 36;
    optional string TOTAL_BID_QTTY = 37;
    optional string PRIOR_PRICE = 38;
    optional string PT_MATCH_QTTY = 39;
    optional string PT_MATCH_PRICE = 40;
    optional string PT_TOTAL_TRADED_QTTY = 41;
    optional string PT_TOTAL_TRADED_VALUE = 42;
    optional string Status = 43;
    optional string priceOne = 44;
    optional string priceTwo = 45;    
    optional string tradingSessionID = 46;
    optional string openInterest = 47;
    optional string openInterestChange = 48;
    optional string firstTradingDate = 49;
    optional string lastTradingDate = 50;
    optional string underlyingSymbol = 51;
    optional string IssuerName = 52;
    optional string CoveredWarrantType = 53;
    optional string MaturityDate = 54;
    optional string ExercisePrice = 55;
    optional string ExerciseRatio = 56;
    optional string ListedShare = 57;
}